--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"postcss-nested": "^5.0.6",
 		"postcss-preset-env": "^7.4.3",
 		"react-a11y": "1.1.0",
-		"react-addons-css-transition-group": "^15.6.2",
+		"react-transition-group": "^4.4.2",
 		"strip-loader": "^0.1.2",
 		"style-loader": "^3.3.1",
 		"webpack": "^5.72.0",
